syntax = "proto3";

package com.psa;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


enum OrderType {
  UNSET_ORDER_TYPE = 0;
  LIMIT = 1;
  MARKET = 2;
}

enum Side {
  UNSET_SIDE = 0;
  BUY = 1;
  SELL = 2;
}

enum OrderStatus {
  UNSET_ORDER_STATUS = 0;
  OPEN = 1;
  COMPLETE = 2;
}

message GetSymbolsResponse {
  repeated Symbol symbols = 1;
}

message Symbol {
  enum SymbolStatus {
    UNSET_SYMBOL_STATUS = 0;
    OPEN = 1;
    HALTED = 2;
  }
  string symbol = 1;
  SymbolStatus status = 2;
}

message GetLastPriceRequest {
  string symbol = 1;
}

message GetLastPriceResponse {
  string symbol = 1;
  double price = 2;
}

message CreateOrderRequest {
  string broker = 1;
  string symbol = 2;
  OrderType type = 3;
  double price = 4;
  Side side = 5;
  int32 quantity = 6;
}

message CreateOrderResponse {
  string id = 1;
}

message GetOrdersRequest {
  string broker = 1;
  string symbol = 2;
  OrderStatus status = 3;
}

message Order {
  string id = 1;
  OrderStatus status = 2;
  string broker = 3;
  string symbol = 4;
  OrderType type = 5;
  double price = 6;
  Side side = 7;
  int32 quantity = 8;
  int32 quantityFilled = 9;
  int32 quantityCancelled = 10;
  google.protobuf.Timestamp timestamp = 11;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

service Exchange {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetSymbols(google.protobuf.Empty) returns (GetSymbolsResponse);
  rpc GetLastPrice(GetLastPriceRequest) returns (GetLastPriceResponse);
}